--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="example3">
+    <div id="mount1"></div>
+    <div id="mount2"></div>
+  </div>
   <div id="root"></div>
   <script type="module" src="/src/index.tsx"></script>
   <!--
