--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="example3">
-    <div id="mount1"></div>
-    <div id="mount2"></div>
-  </div>
   <div id="root"></div>
+  <div id="wam-window-panels"></div>
   <script type="module" src="/src/index.tsx"></script>
   <!--
       This HTML file is a template.
