--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <div id="mount2"></div>
   <div id="root"></div>
   <div id="wam-window-panels"></div>
+  <div id="confirm-dialogs"></div>
   <script type="module" src="/src/index.tsx"></script>
   <!--
       This HTML file is a template.
