add prompt dialog, locked tracks can't be deleted

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <div id="root"></div>
   <div id="wam-window-panels"></div>
   <div id="confirm-dialogs"></div>
+  <div id="prompt-dialogs"></div>
   <script type="module" src="/src/index.tsx"></script>
   <!--
       This HTML file is a template.
