include parameter info and values in PambaWamNode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#454648" />
   <meta name="description" content="lil' DAW, lives on the web" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
